--- a/server/stylesheets/style.css
+++ b/server/stylesheets/style.css
@@ -41,6 +41,7 @@ a {
 }
 
 .navbar .nav .dropdown li a {
+    display: inline;
     color: #777;
 }
 
@@ -87,11 +88,17 @@ a {
     display: inline-block;
     padding: 8px 0 8px 0;
     margin-left: 5px;
-    width: 70%;
+    width: 60%;
 }
 
 #reset-button {
     display: inline-block;
     padding: 7px 0 8px 0;
     width: 50px;
+}
+
+#error-field{
+    display: inline-block;
+    width: 50%;
+    padding-bottom: 5px;
 }
