--- a/server/stylesheets/style.css
+++ b/server/stylesheets/style.css
@@ -8,10 +8,6 @@ body {
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-#map {
-    height: 100%;
-}
-
 a {
     cursor: pointer;
 }
@@ -121,34 +117,34 @@ a {
 }
 
 .row {
-    padding-top: 55px;
+    padding: 55px 0 55px 0;
 }
 
 .col-md-2 nav {
     height: 100%;
 }
 
-footer {
+#footer {
     padding-top: 20px;  
     padding-bottom: 20px; 
     text-align: center;
     color: gray;
 }
-footer .list-inline {
+#footer .list-inline {
   margin: 0;
   padding: 0;
 }
-footer .copyright {
+#footer .copyright {
   font-size: 14px;
   text-align: center;
   margin-bottom: 0;
 }
 
-footer a{
+#footer a{
     display: inline-block;
 }
 
-footer a:hover{
+#footer a:hover{
     display: inline-block;
     text-decoration: none;
 }
